# busmaster

./: .gitignore  Busmaster-EN.docx  Busmaster-ENG.docx  Busmaster-FR.docx
Busmaster_Release/: Installer.lnk  uninstaller.lnk
Busmaster_Release/ressources/: setup.bat
Busmaster_Release/ressources/BUSMASTER_v3.2.2/: BUSMASTER_Interface.h  LDFEditor.chm  ProjectConfiguration.ilk
Documents/1 Development Environment/: development_environment.ditamap
Documents/1 Development Environment/topics/: Installation_Of_Additional_Libraries.dita  vc.dita
Documents/2 Requirement Specification/topics/: frame_transmission.dita
Documents/4 Help/: help.ditamap
Installation Setup/: BUSMASTER INSTALL SCRIPT.nsi  CleanRegistry.nsi  NSISHeaders.nsh
Sources/: build.bat
Sources/BUSMASTER/: BUSMASTER.sln  CMakeLists.txt
Sources/BUSMASTER/CAN_AGCO/: AcceptanceFilterDlg.cpp  AcceptanceFilterDlg.h  CANRegAnalysis.cpp  CAN_AGCO.cpp  CAN_AGCO.def  CAN_AGCO.h  CAN_AGCO.rc  CAN_AGCO.vcxproj  CAN_AGCO.vcxproj.filters  CAN_AGCOJPN.rc  CAN_AGCO_Extern.h  CAN_AGCO_Resource.h  CAN_AGCO_stdafx.cpp  CAN_AGCO_stdafx.h  CMakeLists.txt  CanBox2.cpp  CanBox2.h  CanUsbTypes.h  ChangeRegisters.cpp  ChangeRegisters.h  GestionMessages.cpp  GestionMessages.h  IOCanBox2.aps  IOCanBox2.clw  IOCanBox2.cpp  IOCanBox2.dsp  IOCanBox2.dsw  IOCanBox2.h  IOCanBox2.rc  IOCanBox2.sln  IOCanBox2.vcproj  IOCanBox2.vcxproj  IOCanBox2.vcxproj.filters  ReadMe.txt  Resource.h  SIECA132.h  StdAfx.cpp  StdAfx.h  TypeDefinition.h  Type_SIECA132.h  (+2 more)
Sources/BUSMASTER/CAN_AGCO/res/: IOCanBox2.rc2
(+1130 files in other folders)
